Istio/setup/kiali/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali-vs
  namespace: istio-system
spec:
  hosts:
    # - "adventureworks.westeurope.cloudapp.azure.com"
    - "kubernetes.docker.internal"
  gateways:
  - kiali-gateway
  http:
  - match:
    - uri:
        prefix: "/kiali"
    route:
    - destination:
        host: kiali
        port:
          number: 20001
